// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <expenseListFilters
    filters={
        Object {
            "endDate": undefined,
            "sortBy": "date",
            "startDate": undefined,
            "text": "",
          }
    }
    setEndDate={[Function]}
    setStartDate={[Function]}
    setTextFilter={[Function]}
    sortByAmount={[Function]}
    sortByDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "filters": Object {
        "endDate": undefined,
        "sortBy": "date",
        "startDate": undefined,
        "text": "",
      },
      "setEndDate": [Function],
      "setStartDate": [Function],
      "setTextFilter": [Function],
      "sortByAmount": [Function],
      "sortByDate": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": "expenseListFilters",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "filters": Object {
          "endDate": undefined,
          "sortBy": "date",
          "startDate": undefined,
          "text": "",
        },
        "setEndDate": [Function],
        "setStartDate": [Function],
        "setTextFilter": [Function],
        "sortByAmount": [Function],
        "sortByDate": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": "expenseListFilters",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render ExpenseListFilters with alt data correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <expenseListFilters
    filters={
        Object {
            "endDate": "1970-01-04T00:00:00.000Z",
            "sortBy": "amount",
            "startDate": "1970-01-01T00:00:00.000Z",
            "text": "bills",
          }
    }
    setEndDate={[Function]}
    setStartDate={[Function]}
    setTextFilter={[Function]}
    sortByAmount={[Function]}
    sortByDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "filters": Object {
        "endDate": "1970-01-04T00:00:00.000Z",
        "sortBy": "amount",
        "startDate": "1970-01-01T00:00:00.000Z",
        "text": "bills",
      },
      "setEndDate": [Function],
      "setStartDate": [Function],
      "setTextFilter": [Function],
      "sortByAmount": [Function],
      "sortByDate": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": "expenseListFilters",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "filters": Object {
          "endDate": "1970-01-04T00:00:00.000Z",
          "sortBy": "amount",
          "startDate": "1970-01-01T00:00:00.000Z",
          "text": "bills",
        },
        "setEndDate": [Function],
        "setStartDate": [Function],
        "setTextFilter": [Function],
        "sortByAmount": [Function],
        "sortByDate": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": "expenseListFilters",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
